# libhri-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rosdoc2.yaml  rpm.store  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules
doc/: index.rst
hri/: CHANGELOG.rst  CMakeLists.txt  package.xml
hri/include/hri/: body.hpp  hri.hpp  voice.hpp
hri/src/hri/: body.cpp  face.cpp  person.cpp  voice.cpp
hri/test/: test_hri.cpp
include/hri/: body.hpp  face.hpp  types.hpp
pyhri/: CHANGELOG.rst  CMakeLists.txt  package.xml
pyhri/doc/: conf.py
pyhri/hri/: __init__.py
pyhri/src/pyhri/: converters.hpp  pyhri.cpp
pyhri/test/: test_pyhri.py
rpm/: ros-rolling-pyhri.spec  template.spec
src/hri/: body.cpp  face.cpp  hri.cpp
src/pyhri/: ndarray_converter.cpp  ndarray_converter.h
test/: test_hri.cpp  test_pyhri.py
