<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hri</name>
  <version>2.9.0</version>
  <description>A wrapper library around the ROS4HRI ROS topics</description>
  <maintainer email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">https://ros4hri.github.io/libhri</url>
  <url type="bugtracker">https://github.com/ros4hri/libhri/issues</url>
  <url type="repository">https://github.com/ros4hri/libhri</url>
  <author email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</author>
  <author email="luka.juricic@pal-robotics.com">Luka Juricic</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>magic_enum</build_depend>

  <depend>tf2</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>hri_msgs</depend>
  <depend>libopencv-dev</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export> 
</package>
